fixed dark mode and added footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,9 @@
   --foreground: #171717;
 }
 .dark {
-  --background: #171717;
-  /* --foreground: lightgrey; */
+  --background: #2a2929;
+  --foreground: lightgrey;
+
 }
 
 *{
